torrfreedom/include/style.css
/* http://torrfreedom.i2p theme by dr|z3d */

html {
    scrollbar-color: #454343 #232020;
}

body, html {
    min-height: 100% !important;
    background: #232020;
    background: #151414 !important;
}

body {
    margin: 0 0 5px;
    padding: 0 8px;
    position: relative;
    min-width: 900px;
    color: #bbb;
    opacity: 1 !important;
    overflow-x: hidden;
}

body, input, select, textarea, button {
    font-family: Open Sans, Droid Sans, Noto Sans, Segoe UI, sans serif !important;
    font-size: 10pt !important;
    vertical-align: middle;
}

*:focus {
    outline: none !important;
}

::-moz-selection, ::selection {
    color: #fff;
    background: #563232;
}

code {
    margin-left: 2px;
    font-family: Noto Sans Mono, DejaVu Sans Mono, Consolas, monospace;
    color: #393;
    -moz-user-select: all;
    -webkit-user-select: all;
    user-select: all;
}

code::-moz-selection, code::selection {
    background: #393;
    color: #fff;
}

input[type="submit"], input[type="reset"], input[type="radio"], input[type="file"], input[type="checkbox"], select, label {
    cursor: pointer;
}

#sitename a {
    line-height: 1;
    word-spacing: -0.05em;
    letter-spacing: 0.1em;
    font-weight: 900 !important;
    font-size: 44pt !important;
    color: #f2f2f2 !important;
    text-align: center !important;
    text-transform: uppercase;
    text-shadow: 0 0 1px #000;
    user-select: none;
}

#sitename {
    text-align: center;
}

#sitename a:hover {
    text-decoration: none !important;
}

@supports (-webkit-background-clip: text) {
    .title table td:nth-child(2), #sitename a {
        text-shadow: none;
        background: linear-gradient(to bottom, #210, #310 15%, #fff 50%, #310 80%) !important;
        background: repeating-linear-gradient(to bottom, rgba(0, 0, 0, .2), rgba(0, 0, 0, .5) 2px),
                    linear-gradient(to bottom, rgba(255, 96, 0, .5), rgba(0, 0, 0, .4) 100%),
                    linear-gradient(to bottom, #740, #520 10%, #fff 35%, #310 75%) !important;
        -webkit-background-clip: text !important;
        background-clip: text !important;
        -webkit-text-stroke-color: #fff;
        -webkit-text-stroke-width: 1px;
        -webkit-text-fill-color: transparent !important;
        filter: drop-shadow(0 0 1px #300) drop-shadow(0 0 2px #200) drop-shadow(0 0 3px rgba(0,0,0,.1));
    }
}

.main, form {
    text-align: center;
}

table {
    margin: auto;
    width: 100%;
    border-collapse: collapse !important;
}

a:visited {
    color: #686;
    color: #a61;
}

a:link {
    color: #494;
    color: #c83;
    text-shadow: 0 1px 1px #222;
    text-decoration: none;
    outline: none;
}

a:hover, a:focus {
    color: #3b3;
    color: #f60;
    text-decoration: underline;
}

a:active {
    color: #3f3;
    color: #d30;
}

a.biglink {
    text-decoration: none;
}

td a img {
    opacity: .7;
}

td a:hover img, td a:focus img {
    opacity: 1;
}

a, b, label {
    font-weight: 600 !important;
}

.borderTable tr:last-child td {
    text-align: center;
    border-bottom: 1px solid #222;
}

ul {
   list-style: none;
}

#uploader {
    margin-top: 8px;
    border: 1px solid #222;
}

#details tr:not(#dostuff):nth-child(odd) td, #dologin tr:not(#dostuff):nth-child(odd) td,
#signup tr:not(#dostuff):nth-child(odd) td, #myaccount tr:not(#dostuff):nth-child(odd) td,
#torrents tr:not(#dostuff):nth-child(odd), #uploader tr:not(#dostuff):nth-child(odd),
#torrentedit tr:not(#dostuff):nth-child(odd) {
    background: #454242 !important;
}

#details tr:nth-child(even) td, #dologin tr:not(#dostuff):nth-child(even) td,
#signup tr:not(#dostuff):nth-child(even) td, #myaccount tr:not(#dostuff):nth-child(even) td,
#torrents tr:not(#dostuff):nth-child(even), #uploader tr:not(#dostuff):nth-child(even),
#torrentedit tr:not(#dostuff):nth-child(even) {
    background: #343131 !important;
}

th, #dostuff td {
    padding: 8px !important;
    font-size: 110%;
    font-weight: 600 !important;
    background: linear-gradient(to bottom, #343431, #232020) !important;
}


#torrents {
    margin-top: -2px;
    border: 1px solid #111 !important;
}

#torrents th, #torrents td {
    padding: 4px 12px;
}

#torrents th {
    font-size: 90% !important;
    text-align: center !important;
}

#torrents th:nth-child(2), #torrents td:nth-child(2) {
    text-align: left;
}

#torrents th:nth-child(n+3), #torrents td:nth-child(n+3) {
    text-align: center;
}

#torrents td:first-child::before {
    content: "";
    display: inline-block;
    height: 36px;
    vertical-align: middle;
}

#torrents img {
    vertical-align: middle;
}

#torrents th:nth-child(2) {
    text-align: left !important;
}

#torrents td {
    padding-top: 4px !important;
    padding-bottom: 4px !important;
}

#torrents th:first-child, #torrents td:first-child {
    position: relative;
}

#torrents td:first-child {
    vertical-align: middle !important;
}

#torrents td:first-child a {
    font-weight: 700 !important;
}

#torrents td:nth-child(2), #torrents td:nth-child(2) a {
    line-height: 1.05;
}

#torrents td:nth-child(even) {
    background: rgba(255,255,255,.01) !important;
}

#torrents tr:nth-child(n+2):hover td {
    background: #2a2525 !important;
}

#torrents td:nth-child(3), #torrents td:nth-child(7) {
    white-space: nowrap;
}

#torrents td:nth-child(7) {
    word-spacing: -0.1em;
}

#torrents .dlicons img {
    margin: 0 2px;
}

input[type="submit"], input[type="reset"], input[type="file"], input[type="text"], textarea, input[type="password"], select, button {
    margin: 0 6px;
    padding: 3px 8px;
    border: none !important;
    box-shadow: 0 0 0 1px #121010;
    border-radius: 2px !important;
    background: #343232;
    color: #eee;
    outline: none;
}
/* ... */

